[gd_scene load_steps=18 format=3 uid="uid://mu31biemy71"]

[ext_resource type="Texture2D" uid="uid://dsqqflnbklf8y" path="res://entities/characters/player/assets/BÃ¶rg.png" id="1_eoic6"]
[ext_resource type="Script" uid="uid://b6p3mqlxkcvhg" path="res://entities/characters/player/player.gd" id="1_qrd5i"]
[ext_resource type="Script" uid="uid://bua6rtv8t5825" path="res://shared/components/input_component.gd" id="4_wqnow"]
[ext_resource type="Script" uid="uid://blu5xbdwvxdg3" path="res://shared/components/navigation_component.gd" id="5_lbevp"]
[ext_resource type="Script" uid="uid://cw7ul52kdf4k7" path="res://shared/components/movement_component.gd" id="6_a3s12"]
[ext_resource type="Script" uid="uid://cmc20wtvb8qvx" path="res://shared/components/animation_component.gd" id="6_m0gj2"]
[ext_resource type="Script" uid="uid://bqry6wrakykcp" path="res://shared/components/leveling_component.gd" id="7_m0gj2"]
[ext_resource type="Script" uid="uid://urdreyx4totx" path="res://shared/components/health_component.gd" id="8_0d5hj"]
[ext_resource type="Script" uid="uid://gb65rpgk814y" path="res://shared/components/combat_stats_component.gd" id="9_mx21o"]
[ext_resource type="Script" uid="uid://i5puns5ayv24" path="res://shared/components/equipment_component.gd" id="10_sybl7"]
[ext_resource type="Script" uid="uid://csbxj52367kyv" path="res://shared/components/status_effect_component.gd" id="11_5otfs"]
[ext_resource type="Script" uid="uid://buqk3jmwtfqyw" path="res://shared/components/combat_component.gd" id="12_0s3gd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wqnow"]
radius = 3.0

[sub_resource type="Animation" id="Animation_m0gj2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_a3s12"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_0d5hj"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.20000002, 0.40000004, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -4), Vector2(0, -5), Vector2(0, -4), Vector2(0, -5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.20000002, 0.40000004, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.08726646, 0.0, 0.08726646]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mx21o"]
_data = {
&"RESET": SubResource("Animation_m0gj2"),
&"idle": SubResource("Animation_a3s12"),
&"walk": SubResource("Animation_0d5hj")
}

[node name="Player" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
script = ExtResource("1_qrd5i")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -4)
texture = ExtResource("1_eoic6")
hframes = 6
vframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wqnow")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
unique_name_in_owner = true
target_desired_distance = 1.0
path_postprocessing = 1
avoidance_enabled = true
debug_enabled = true
debug_use_custom = true
debug_path_custom_color = Color(0.7515501, 0.15704575, 1.92523e-07, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_mx21o")
}
autoplay = "idle"

[node name="Camera2D" type="Camera2D" parent="."]
process_callback = 0
limit_left = -112
limit_top = -80
limit_right = 720
limit_bottom = 448
limit_smoothed = true
position_smoothing_enabled = true

[node name="InputComponent" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("4_wqnow")
metadata/_custom_type_script = "uid://bua6rtv8t5825"

[node name="NavigationComponent" type="Node" parent="." node_paths=PackedStringArray("parent")]
unique_name_in_owner = true
script = ExtResource("5_lbevp")
parent = NodePath("..")
metadata/_custom_type_script = "uid://blu5xbdwvxdg3"

[node name="MovementComponent" type="Node" parent="." node_paths=PackedStringArray("parent")]
unique_name_in_owner = true
script = ExtResource("6_a3s12")
parent = NodePath("..")
metadata/_custom_type_script = "uid://cw7ul52kdf4k7"

[node name="AnimationComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("6_m0gj2")
metadata/_custom_type_script = "uid://cmc20wtvb8qvx"

[node name="HealthComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("8_0d5hj")
metadata/_custom_type_script = "uid://urdreyx4totx"

[node name="LevelingComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("7_m0gj2")
metadata/_custom_type_script = "uid://bqry6wrakykcp"

[node name="CombatStatsComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("9_mx21o")
metadata/_custom_type_script = "uid://gb65rpgk814y"

[node name="EquipmentComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("10_sybl7")
metadata/_custom_type_script = "uid://i5puns5ayv24"

[node name="StatusEffectComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("11_5otfs")
metadata/_custom_type_script = "uid://csbxj52367kyv"

[node name="CombatComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("12_0s3gd")
metadata/_custom_type_script = "uid://buqk3jmwtfqyw"
